<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_alc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="casual"
        android:text="@string/welcome_alc"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/about_alc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/about_alc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#B27C4DFF"
        android:text="@string/about_alc"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/welcome_alc"
        app:layout_constraintStart_toStartOf="@+id/welcome_alc"
        app:layout_constraintTop_toBottomOf="@+id/welcome_alc" />

    <Button
        android:id="@+id/profile_alc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#B27C4DFF"
        android:text="@string/profile_alc"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/about_alc"
        app:layout_constraintStart_toStartOf="@+id/about_alc"
        app:layout_constraintTop_toBottomOf="@+id/about_alc" />
</androidx.constraintlayout.widget.ConstraintLayout>